Fix - Layout issue with footer widgets

--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -57,25 +57,25 @@
 	}
 
 	&.footer-widgets-col--one {
-		.widget {
+		.footer-widget-area {
 			width: 100%;
 		}
 	}
 
 	&.footer-widgets-col--two {
-		.widget {
+		.footer-widget-area {
 			width: 48.5%;
 		}
 	}
 
 	&.footer-widgets-col--three {
-		.widget {
+		.footer-widget-area {
 			width: 31.5%;
 		}
 	}
 
 	&.footer-widgets-col--four {
-		.widget {
+		.footer-widget-area {
 			width: 23%;
 		}
 	}
